--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.2.0'
     def room_version = '2.5.0'
 
     implementation platform('com.google.firebase:firebase-bom:31.2.1')
