--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     def room_version = '2.5.0'
 
     implementation platform('com.google.firebase:firebase-bom:31.2.1')
